linked simulator from learn page
Former-commit-id: e3e22d4e80de0d5e449c745522373f05481dda8b [formerly 48b94d569cb5ca2c3e889bdb334d9f6651a37ad5]
Former-commit-id: 9b0b8082ff81e772b0614c1e3898436c80a06f29

--- a/learn.html
+++ b/learn.html
@@ -23,6 +23,11 @@ of the Moon."
 	<section class="calc" id="tryit">
 		<div class="outerDiv">
 			<div class="calcDiv">
+				<a href="tools/pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400"></a>
+			</div>
+		</div>
+		<div class="outerDiv">
+			<div class="calcDiv">
 				{%include_relative _includes/learn/suborbital.html%}
 			</div>
 		</div>
@@ -52,10 +57,10 @@ of the Moon."
 				<ul>
 					<li><a href="tools/teth.html">Tether Tool</a></li>
 					<li><a href="tools/starplotter.html">Starplotter</a></li>
+					<li><a href="tools/pelletSimulator.html">Pellet Simulator</a></li>
 					<li><a href="tools/engineSearch.html">Engine Search</a></li>
 					<li><a href="tools/gravityTurn.html">Gravity Turn [bad UI]</a></li>
 					<li><a href="tools/planets.html">Transfer Calculator [in "progress"]</a></li>
-					<li><a href="tools/pelletSimulator.html">Pellet Simulator [in "progress"]</a></li>
 				</ul>
 			</div>
 		</div>
