--- a/tools/starplotter.html
+++ b/tools/starplotter.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<style>
-canvas{
-	border-style:solid;
-	border-width:5px;
-	border-color:#0000ff;
-}
-		</style>
+---
+layout: toolTemplate
+title: Starplotter
+---
 	</head>
 	<body>
-		<h1>Star Plotter</h1>
-		<h5>Controls:</h5>
-		<p>Movement: A,S,D,F<br>Zoom: Q,E<br>Number of objects: +,-</p>
-		<canvas id="plot" width="1200" height="800"></canvas>
+		<div class="wrapper" id="main">
+			<h1>Star Plotter</h1>
+			<h5>Controls:</h5>
+			<p>Movement: A,S,D,F<br>Zoom: Q,E<br>Number of objects: +,-</p>
+			<canvas id="plot" width="1000" height="800"></canvas>
+		</div>
 		<script src="../js/stars.js"></script>
 		<script>
 String.prototype.hashCode = function() {
@@ -28,7 +23,7 @@ String.prototype.hashCode = function() {
   return hash;
 };
 
-for(var i=0;i<stars.stars.length;i++){
+for(var i=0;i<stars.stars.length;i++){//delete planets from the list of stars, we don't want them
 	if(stars.stars[i]["type"] == "TP" || stars.stars[i]["type"] == "JP" || stars.stars[i]["type"] == "NP"){
 		stars.stars.splice(i--,1);
 	};
@@ -41,15 +36,14 @@ vector=[
 ];
 var ra = 0;
 var dec = Math.PI/4;
-scale=25;
-canvas = document.getElementById("plot");
-ctx = canvas.getContext("2d");
+var scale = 25;
+var canvas = document.getElementById("plot");
+var ctx = canvas.getContext("2d");
 ctx.font="20px Georgia";
 document.onkeypress = inpar;
 function inpar(e){
 	var evtobj = window.event? event : e
 	var unicode = evtobj.charCode? evtobj.charCode : evtobj.keyCode
-	//alert(unicode);
 	if(unicode == 97){
 		ra += 0.01;
 	}
@@ -123,5 +117,3 @@ draw = function(){
 	};
 };draw();
 		</script>
-	</body>
-</html>
