misc html errors
Former-commit-id: 0d7e0f66a127a7e3cb615b6c87e22950b53b6e24

--- a/learn.html
+++ b/learn.html
@@ -23,7 +23,7 @@ of the Moon."
 	<section class="calc" id="tryit">
 		<div class="outerDiv">
 			<div class="calcDiv">
-				<a href="tools/pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400"></a>
+				<a href="tools/pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
 			</div>
 		</div>
 		<div class="outerDiv">
@@ -65,7 +65,7 @@ of the Moon."
 			</div>
 		</div>
 		<div class="outerDiv">
-			<div cladd="calcDiv">
+			<div class="calcDiv">
 				<!--Geogebra applet-->
 				<div id="applet_container3" style="width:900px;height:500px;padding:10px;margin-bottom:20px;"></div>
 				<!--end Geogebra applet-->
@@ -74,7 +74,7 @@ of the Moon."
 	</section>
 </div>
 <div class="container">
-<section class="wide" formid="lessons">
+<section class="wide" id="lessons">
 	<div class="outerDiv">
 		<div class="innerDiv">
 			<h2>A quick introduction to orbital mechanics</h2>
